# hcp-icafix

./: .dockerignore  .gitignore  Dockerfile  Dockerfile-Amy  Dockerfile-dev  Dockerfile-mcrbase  Dockerfile-trusty  README.md  TODO  docker_build.sh  manifest.json  pyproject.toml  requirements.txt  run  run.py  test_icafix.py
fix_patch/: patch_notes.txt  settings.sh
fix_patch/compiled/Linux/x86_64/: fix_1a_extract_features  fix_2c_loo_results  fix_3_clean  functionmotionconfounds  readme.txt  run_fix_1a_extract_features.sh  run_fix_2c_loo_results.sh  run_fix_3_clean.sh  run_functionmotionconfounds.sh
fw_gear_icafix/: __init__.py.j2  main.py  parser.py
fw_gear_icafix/utils/: custom_logger.py  diff_utils.py  environment.py  gear_preliminaries.py  gear_toolkit_command_line.py  results.py  set_gear_args.py
pipeline_patch/: patch_notes.txt
pipeline_patch/ICAFIX/: hcp_fix
pipeline_patch/PostFix/Compiled_prepareICAs/: prepareICAs  readme.txt  run_prepareICAs.sh
pipeline_patch/RestingStateStats/: RestingStateStats.sh
pipeline_patch/RestingStateStats/Compiled_RestingStateStats/: RestingStateStats  readme.txt  run_RestingStateStats.sh
scripts/: SetUpHCPPipeline.sh  bash_functions.sh  create_postfix_scene_zip.sh  file_cache.sh  hcp_fix_multi_run_debug2
utils/: Common.py  args.py  custom_logger.py  func_utils.py  misc.py  results.py  struct_utils.py
