[tool.poetry]
name = "hcp-icafix"
version = "0.1.0"
description = ""
authors = ["amyhegarty <amyhegarty10@gmail.com>"]
readme = "README.md"
license = "Other"
keywords = [
    "Flywheel",
    "Gears"
]
repository = ".."
classifiers = [
    "Topic :: Scientific/Engineering"
]

[tool.poetry.dependencies]
python = "^3.8"
flywheel-gear-toolkit = "^0.6"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
pytest-cov = "^2.10.1"
pytest-mock = "^3.3.1"
coverage = {extras = ["toml"], version = "^5.3"}
black = "^20.8b1"
isort = "^5.6.4"
pylint = "^2.6.0"
pycodestyle = "^2.6.0"
pydocstyle = "^5.1.1"
mypy = "^0.961"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.core.masonry.api"